# frieren

./: .gitignore  Cargo.toml  LICENSE  README.md  schema.sql
.github/workflows/: release.yml
.sqlx/: query-37385a8a3033313f4831a54d2fd9e591e2af8ce217b3ba0d9eaab64059d86bbb.json  query-87d0c2be12f5dff1ab01626d98b07a63ad4ee906de1c21c234ba97e631533ff5.json
debian/: config-example.toml  frieren.service  postinst  postrm  prerm
src/: main.rs
