[package]
name = "frieren"
license = "MIT"
authors = ["Kumanofoo <kumanofoo@gmail.com>"]
description = "Discord bot that backs up and reposts messages"
version = "0.1.1"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
env_logger = "0.11"
log = "0.4"
reqwest = "0.12"
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.deb]
revision = "0.1"
maintainer = "Kumanofoo <kumanofoo@gmail.com>"
copyright = "2026, Kumanofoo"
license-file = ["LICENSE", "4"]
depends = "$auto, systemd, libsqlite3-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/frieren", "usr/bin/", "755"],
    ["debian/config-example.toml", "etc/frieren/config.toml", "640"],
    ["README.md", "usr/share/doc/frieren/README.md", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "frieren", enable = false, start = false }